--- a/.env
+++ b/.env
@@ -15,17 +15,17 @@ DATABASE_URL=postgres://postgres:postgres@timescaledb:5432/meshtastic
 #MQTT_IS_TLS=false
 #170.64.137.166:1883
 # MQTT connection details
-MQTT_HOST=mqtt.meshtastic.org
-MQTT_PORT=1883
-MQTT_USERNAME=meshdev
-MQTT_PASSWORD=large4cats
+MQTT_HOST=mqtt.spp.lol
+MQTT_PORT=8883
+MQTT_USERNAME=MC01
+MQTT_PASSWORD=snorr702
 MQTT_KEEPALIVE=60
-MQTT_TOPIC='msh/US/#'
-MQTT_IS_TLS=false
+MQTT_TOPIC='msh/SNORR/#'
+MQTT_IS_TLS=true
 
 # MQTT protocol version (default: MQTTv5) the public MQTT server supports MQTTv311
 # Options: MQTTv311, MQTTv31, MQTTv5
-MQTT_PROTOCOL=MQTTv311
+MQTT_PROTOCOL=MQTTv5
 
 # MQTT callback API version (default: VERSION2) the public MQTT server supports VERSION2
 # Options: VERSION1, VERSION2
@@ -37,7 +37,7 @@ MESH_HIDE_SOURCE_DATA=false
 ## Hide destination data in the exporter (default: false)
 MESH_HIDE_DESTINATION_DATA=false
 ## MQTT server Key for decoding
-MQTT_SERVER_KEY=1PG7OiApB1nwvP+rz05pAQ==
+MQTT_SERVER_KEY=gFQ+pPrQWFK7G+XYk/aQTu5UdfnKAKswnzLyktvm9c4=
 
 # Message types to filter (default: none) (comma separated) (eg. TEXT_MESSAGE_APP,POSITION_APP)
 # Full list can be found here: https://buf.build/meshtastic/protobufs/docs/main:meshtastic#meshtastic.PortNum
